--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "onlineshopping",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://{NivethaPoobalakrishnan}.github.io/{reactapp}",
+  "homepage": "http://NivethaPoobalakrishnan.github.io/reactapp",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
